# fastapi-easy-crud

./: LICENSE.md  README.md  pyproject.toml
fastapi_easy_crud/: __init__.py  repository.py  routes.py
